# opencv_calibration

./: CMakeLists.txt  CalibUtils.cpp  CalibUtils.h  generate_calib_xml.py  readme.md
opencv_stereo_calib/: CMakeLists.txt  stereo_calib.cpp  stereo_calib.xml  stereocalib.sh
single-camera-calibration/: OpenCVCalibration.cpp  OpenCVCalibration.h  left_calib_example.xml  main.cpp
stereo-camera-calibration/: OpenCVStereoCalibration.cpp  OpenCVStereoCalibration.h  main.cpp
